<resources>
    <string name="app_name">Design Aplikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poin">POIN</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="one_time">One Time</string>
    <string name="rp_30_000">Rp 30.000</string>
    <string name="_15_gb">15 GB</string>
    <string name="_30_hari">30 Hari</string>
    <string name="internet">Internet</string>
    <string name="roaming">Roaming</string>
    <string name="choose_package">Choose Your Package</string>
    <string name="_1">tab1</string>
    <string name="_2">tab2</string>
    <string name="_3">tab3</string>
    <string name="_4">tab4</string>
    <string name="_5">tab5</string>
    <string name="_6">tab6</string>
    <string name="_7">tab7</string>
    <string name="filter">Filter</string>
</resources>