<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home_24"/>

    <item android:id="@+id/poinFragment"
        android:title="@string/poin"
        android:icon="@drawable/trophy"/>

    <item android:id="@+id/shopFragment"
        android:title="@string/shop"
        android:icon="@drawable/shopping_cart_24"/>

    <item android:id="@+id/exploreFragment"
        android:title="@string/explore"
        android:icon="@drawable/rocket"/>

    <item android:id="@+id/menuFragment"
        android:title="@string/menu"
        android:icon="@drawable/baseline_person_2_24"/>
</menu>