<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    android:elevation="2dp"
    android:id="@+id/cl_recommended"
    android:foreground="?selectableItemBackground"
    android:background="@drawable/bg_round_grey">

    <TextView
        android:id="@+id/tv_paket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_marginTop="1dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Paket PROMO Combo Special"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".6" />

    <TextView
        android:id="@+id/tv_kuota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_15_gb"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_paket"
        app:layout_constraintTop_toBottomOf="@+id/tv_paket" />

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rp_30_000"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view1"
        android:layout_width="1dp"
        android:layout_height="18dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_durasi"
        app:layout_constraintStart_toEndOf="@+id/tv_durasi"
        app:layout_constraintTop_toTopOf="@id/tv_durasi" />

    <TextView
        android:id="@+id/tv_durasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_hari"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_kuota"
        app:layout_constraintTop_toBottomOf="@+id/tv_kuota" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="18dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/tv_durasi"
        app:layout_constraintTop_toTopOf="@id/tv_durasi">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time"
            android:paddingVertical="2dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>